--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             </tr>
         </table>
         <hr>
+        <style>
+            body{
+                background-color: powderblue;
+            }
+            hr{
+                border-style: none;
+                border-top-style: dotted;
+                border-color: skyblue;
+                border-width: 10px;
+                width: 10%;
+            }
+        </style>
     </head>
     <br>
     <body>
@@ -48,7 +60,7 @@
             </tr>  
         </table>
         <br>
-        <img width="300px" length="100" src="dp.jpeg" alt="">
+       <img width="300px" length="100" src="dp.jpeg" alt="">
         <p><strong>We picked our favorite design <br>portfolios from Carnegie Mellon <br>students. made in their <br>classroom, with Webflow.</strong></p>
         <p>having a strong design portfolio is so <br>important for students who are lookikng to <br>jumpstart their design careers. We <br>strongly believe that design students <br>should have access to the tools they need, <br>regardless of whether or not they can <br>afford them. That`s why, from today on, <br><a href="https://www.google.co.in/">Webflow is free students</a> studying at <br>school, college, or an approved online course. </p>
     </body>
